# transform3d

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  main.c  pyproject.toml
inc/: conversions.h  linalg.h  matrix.h  trans_utils.h  utils.h  vector.h
src/: conversions.c  linalg.c  matrix.c  trans_utils.c  utils.c  vector.c
tests/: lib_wrapper.py  test_conversions.py  test_utils.py
