[tool.poetry]
name = "transform3d"
version = "0.1.0"
description = ""
authors = ["Kyle Chen"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytransform3d = "^3.2.0"
pytest = "^7.4.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
